force-app/main/default/objects/ModelProductMapping__c/ModelProductMapping__c.object-meta.xml
<CustomObject>
    <label>Model Product Mapping</label>
    <nameField>
        <displayFormat>MPM-{00000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Product Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>