force-app/main/default/objects/ModelProductMapping__c/fields/GroupDescription__c.field-meta.xml
<CustomField>
    <fullName>GroupDescription__c</fullName>
    <label>Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>