force-app/main/default/objects/ModelProductMapping__c/fields/ModelNumber__c.field-meta.xml
<CustomField>
    <fullName>ModelNumber__c</fullName>
    <label>Model Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>