force-app/main/default/objects/ModelProductMapping__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Model Product Mapping</relationshipLabel>
    <relationshipName>ModelProductMapping</relationshipName>
    <type>Lookup</type>
</CustomField>