force-app/main/default/objects/ModelProductMapping__c/fields/RecordKey__c.field-meta.xml
<CustomField>
    <fullName>RecordKey__c</fullName>
    <externalId>true</externalId>
    <label>Record Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>