force-app/main/default/objects/ModelProductMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ModelNumber__c</columns>
    <columns>Color__c</columns>
    <columns>GroupDescription__c</columns>
    <columns>Version__c</columns>
    <columns>Description__c</columns>
    <columns>RecordKey__c</columns>
    <columns>Product__c</columns>
    <columns>fm_ProductCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>